--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/kent1.jpg" alt="Mark Guerrero" />
+            <img src="images/kent1.img" alt="Mark Guerrero" />
             <p>Mark Guerrero<br />Product Designer</p>
           </li>
           <li>
-            <img src="images/kent2.jpg" alt="Tom Ford" />
+            <img src="images/kent2.img" alt="Tom Ford" />
             <p>Tom Ford<br />Frontend Developer</p>
           </li>
           <li>
-            <img src="images/kent3.jpg" alt="Camila Garcia" />
+            <img src="images/kent3.img" alt="Camila Garcia" />
             <p>Camila Garcia<br />Marketing</p>
           </li>
           <li>
-            <img src="images/kent4.jpg" alt="Daniel Wilson" />
+            <img src="images/kent4.img" alt="Daniel Wilson" />
             <p>Daniel Wilson<br />UI Designer</p>
           </li>
         </ul>
