--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="#">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="#">Studio</a></li>
@@ -15,10 +15,12 @@
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <div class="contacts">
-        <a href="mailto:info@webstudio.com">info@webstudio.com</a>
-        <a href="tel:+1122334455">+1 (202) 111-11-11</a>
-      </div>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -26,62 +28,56 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <div class="services">
-          <div class="service">
-            <h2>Strategy</h2>
-            <p>
-              Our goal is to identify the business problem and work together for
-              the perfect and creative solution.
-            </p>
-          </div>
-          <div class="service">
-            <h2>Punctuality</h2>
-            <p>
-              Bringing the latest technology to the branch allows us to find the
-              best price solution for showcase possible risks.
-            </p>
-          </div>
-          <div class="service">
-            <h2>Diligence</h2>
-            <p>
-              Become and continue towards the target. The integrated digital
-              design department expands access to relevant services.
-            </p>
-          </div>
-          <div class="service">
-            <h2>Technology</h2>
-            <p>
-              Our approaches focused on digital awareness. The binary form is
-              close support to problem solving.
-            </p>
-          </div>
-        </div>
+        <h2>Our Services</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/kent1.img" alt="Mark Guerrero" width="300" height="200" />
-            <p>Mark Guerrero<br />Product Designer</p>
+            <img src="./images/kent1.img" alt="Mark Guerrero" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/kent2.img" alt="Tom Ford" width="300" height="200" />
-            <p>Tom Ford<br />Frontend Developer</p>
+            <img src="./images/kent2.img" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/kent3.img" alt="Camila Garcia" width="300" height="200" />
-            <p>Camila Garcia<br />Marketing</p>
+            <img src="./images/kent3.img" alt="Camila Garcia" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="images/kent4.img" alt="Daniel Wilson" width="300" height="200" />
-            <p>Daniel Wilson<br />UI Designer</p>
+            <img src="./images/kent4.img" alt="Daniel Wilson" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="#">WEBSTUDIO</a>
-      <p>© 2024 WebStudio. All rights reserved.</p>
+      <a href="./index.html">WebStudio</a>
+      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
 </html>
+
