--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a> <!-- Логотип -->
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
