--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/kent1.img" alt="Mark Guerrero" width="264" />
+            <img src="./images/kent1.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/kent2.img" alt="Tom Ford" width="264" />
+            <img src="./images/kent2.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/kent3.img" alt="Camila Garcia" width="264" />
+            <img src="./images/kent3.jpg" alt="Camila Garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/kent4.img" alt="Daniel Wilson" width="264" />
+            <img src="./images/kent4.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
